fix menu on mobile

--- a/_menu-2.scss
+++ b/_menu-2.scss
@@ -44,7 +44,7 @@
         outline: none;
         transition: all .1s ease-in-out;
         @include media ('<tablet') {
-            color: $primary;
+            color: white;
         }
         &:hover,
         &:active,
